Writing initial test frameworks for checking out books (obs. don't expet these to be passing), creating book instance double in test framework, creating Book class and writing initialize method as well as basic framework for a method to check out books

--- a/lib/library.yaml
+++ b/lib/library.yaml
@@ -1,7 +1,16 @@
----
-:item:
-  :name: "en bok"
-  :author: "en person"
-:item:
-  :name: "en annan bok"
-  :author: "en annan person"
+--- !rub
+- :book1:
+    :title: Trollkarlens hatt
+    :author: Tove Jansson
+  :available: true
+  :return_date: 
+- :book2:
+    :title: Farlig midsommar
+    :author: Tove Jansson
+  :available: false
+  :return_date: '2020-11-31'
+- :book3: 
+    :title: Trollvinter
+    :author: Tove Jansson
+  :available: true
+  :return_date: 
